; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libfat/extr_partition.c_FindFirstValidPartition.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libfat/extr_partition.c_FindFirstValidPartition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SECTOR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FindFirstValidPartition(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32, i32* @MAX_SECTOR_SIZE, align 4
  %7 = call i64 @_FAT_mem_align(i32 %6)
  %8 = inttoptr i64 %7 to i32*
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @FindFirstValidPartition_buf(i32* %13, i32* %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @_FAT_mem_free(i32* %16)
  %18 = load i32, i32* %5, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %12, %11
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @_FAT_mem_align(i32) #1

declare dso_local i32 @FindFirstValidPartition_buf(i32*, i32*) #1

declare dso_local i32 @_FAT_mem_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
